--- a/XUnitTestProject/XUnitTestProject.csproj
+++ b/XUnitTestProject/XUnitTestProject.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -21,11 +21,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>  
+  
+  <ItemGroup>
+    <ProjectReference Include="..\MainProject\RSILauncherDetector.csproj" />
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\RSILauncher-Detector\RSILauncherDetector.csproj" />
-  </ItemGroup>
 
   <ItemGroup>
     <Using Include="Xunit" />
